# hng-vibes

./: README.md
.githib/: PULL_REQUEST_TEMPLATE.md
backend/: .env.example  .gitignore  Dockerfile  Makefile  README.md  TODO.md  alembic.ini  compose.dev.yml  compose.prod.yml  compose.yml  main.py  playlist-details.json  pyproject.toml  requirements.txt  test.js  worker.py
backend/alembic/: README  env.py
backend/app/: __init__.py  __main__.py  config.py  main.py  models.py  schemas.py
backend/app/api/routes/: health.py
backend/app/core/: config.py  database.py  logging.py  redis.py  response.py
backend/app/models/: __init__.py  base.py  track.py
backend/app/schemas/: __init__.py  track.py
backend/app/slack_bot/: __init__.py
backend/app/utils/: __init__.py
backend/migrations/: env.py
frontend/: .gitignore  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: expanded-player.tsx  filter-chips.tsx  player-bar.tsx  playlist-header.tsx  top-bar.tsx  track-details-sheet.tsx  track-list.tsx  track-row.tsx
frontend/components/ui/: dropdown-menu.tsx  toast.tsx
frontend/hooks/: use-toast.ts
frontend/lib/: mock-data.ts  utils.ts
